2037: Replace deprecated method newInstance() in ReflectionUtil (#852)